--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
-examples/quickstart2.db
-examples/quickstart3.db
-examples/quickstart3.db.0
-examples/quickstart3.db.1
-examples/quickstart4.db
-examples/quickstart-dynview.db
-examples/quickstart-transforms.db
+quickstart2.db
+quickstart3.db
+quickstart3.db.0
+quickstart3.db.1
+quickstart4.db
+quickstart-dynview.db
+quickstart-transforms.db
