--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "controldb",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Fast document oriented javascript in-memory database",
   "homepage": "https://firatkiral.github.io/controldb/",
   "main": "src/controldb.js",
@@ -22,7 +22,8 @@
     "indexeddb"
   ],
   "scripts": {
-    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc.json"
+    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc.json",
+    "quickstart5": "node examples/quickstart5.js"
   },
   "author": "Firat Kiral",
   "contributors": [],
