--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "controldb",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "Fast document oriented javascript in-memory database",
   "homepage": "https://firatkiral.github.io/controldb/",
   "main": "src/controldb.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/firatkiral/controldb.git"
+    "url": "git+https://github.com/firatkiral/controldb.git"
   },
   "keywords": [
     "javascript",
@@ -22,7 +22,7 @@
     "indexeddb"
   ],
   "scripts": {
-    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc.json",
+    "jsdoc": "jsdoc -c jsdoc.json",
     "quickstart5": "node examples/quickstart5.js"
   },
   "author": "Firat Kiral",
